worked on user gift card list

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -61,6 +61,7 @@
 </div>
 </section>
 
+<%= render partial: "layouts/usergiftcards" %>
  
 <!-- Steps 1, 2, 3 -->
 <section class="slice base">
@@ -163,13 +164,12 @@
                                                     </div>
                                                     <div class="row">
                                                         <div class="col-xs-9">
+                                                            <a href="#" class="btn btn-md"><i class="fa fa-credit-card"></i> Donate</a>
+                                                            <br/>
                                                             <a href="<%= "http://" +  @userhost + "/cause/show/" +  @causes[i+k].charityid.to_s %>">
                                                             <h2 class="text-left"><%= @causes[i+k].charityname %></h2>
                                                             </a>
-                                                            <br/>
-                                                        
-                                                            <a href="#" class="btn btn-md"><i class="fa fa-credit-card"></i> Donate</a>
-                                                            
+                                                           
                                                         </div>
                                                         
                                                     </div>
