--- a/app/views/layouts/_usergiftcards.html.erb
+++ b/app/views/layouts/_usergiftcards.html.erb
@@ -4,41 +4,81 @@
 
 %>
 
+<style>
+.bg-banner-2 {
+padding: 54px 0 !important;
+background: url(../images/patterns/squairy-light.png) repeat fixed !important;
+color: #fff;
+}
+</style>
+
  <section class="slice bg-banner-2 animate-in-view">
         <div class="wp-section">
             <div class="container">
 <div class="row">
 
+<h3 style="color: #333;">My Gift Cards</h3>
 
-    <% 
-        usergiftcards.each do |usergiftcard|
-    %>
-    <div class="col-md-3">
-        <div class="wp-block product">
-            <figure>
-                <img alt="" src="<%= usergiftcard.merchant.logo.url%>" class="img-responsive img-center">
-            </figure>
-            <h2 class="product-title"><a href=""><%= usergiftcard.merchant.merchantname %></a></h2>
-            <p>
-                <ul class="features">
-                            
-                            <li class="price">$79</li>
-                            <li>Some great feature</li>
-                            
-                        </ul>
-            </p>
-            <div class="wp-block-footer">
-                <span class="price pull-left">$233.33</span>
-                <a href="#" class="btn btn-sm btn-base btn-icon btn-cart pull-right">
-                    <span>Refresh Balance</span>
-                </a>
-            </div>
-        </div>
+    <div class="col-lg-6" style="text-align:center">
+        <div class="row">
+            <% 
+                usergiftcards.each do |usergiftcard|
+            %>
+            <div class="col-lg-6" style="text-align:center">
+                <div class="wp-block product">
+                    <figure>
+                        <img alt="" src="<%= usergiftcard.merchant.logo.url%>" class="img-responsive img-center">
+                    </figure>
+                    <h2 class="product-title"><a href=""><%= usergiftcard.merchant.merchantname %></a></h2>
+                   
+                    <h4 style="color:black"><%= usergiftcard.cardnumber_hash[0...5] %>...</h4>
+                    <span class="primary-letter style-1 c-base">
+                            &nbsp;&nbsp;$<%= usergiftcard.balance %>
+                            </span>
+                            <br/><br/>
+
+                    <p style="text-align:center">
+                        <div style="text-align: center;">
+
+
+                           
+                        
+                            <a href="#" class="btn btn-sm btn-base btn-icon fa-refresh">
+                                <span>Refresh</span>
+                            </a>
+                        
+                        
+                            <br/><br/>
+                            <a href="#" class="btn btn-sm btn-base btn-icon fa-credit-card">
+                                <span>Donate</span>
+                            </a>
+                        </div>        
+                                
+                               
+                    </p>
+                  
+                </div>
+
+              </div>
+
+          <% end %>
       </div>
-    <%
-        
-        end 
-    %>
+
+      <div style="text-align: left;">
+            <% if session[:usergiftcardscount] > 2 %>
+                <a href="#" class="btn btn-base btn-icon btn-icon-right fa-caret-square-o-right">
+                    <span>View All My Gift Cards</span>
+                </a>
+            <% end %>
+            &nbsp;&nbsp;&nbsp;&nbsp;
+            <a href="/giftcard/new" class="btn btn-base btn-icon btn-icon-right fa-gift">
+                    <span>Add A New Gift Card</span>
+            </a>
+        <div style="text-align: center;">
+    </div>
+    
+
+
 
 </div>
 </div>
