--- a/app/views/layouts/_usergiftcards.html.erb
+++ b/app/views/layouts/_usergiftcards.html.erb
@@ -1,8 +1,6 @@
-<% if session[:usergiftcards] 
-    
-    usergiftcards = YAML.load(session[:usergiftcards])
 
-%>
+
+<% if session[:usergiftcardscount] %>
 
 <style>
 .bg-banner-2 {
@@ -15,73 +13,95 @@ color: #fff;
  <section class="slice bg-banner-2 animate-in-view">
         <div class="wp-section">
             <div class="container">
-<div class="row">
+    <div class="row">
 
-<h3 style="color: #333;">My Gift Cards</h3>
+            <h3 style="color: #333;">My Gift Cards</h3>
 
-    <div class="col-lg-6" style="text-align:center">
-        <div class="row">
-            <% 
-                usergiftcards.each do |usergiftcard|
-            %>
-            <div class="col-lg-6" style="text-align:center">
-                <div class="wp-block product">
-                    <figure>
-                        <img alt="" src="<%= usergiftcard.merchant.logo.url%>" class="img-responsive img-center">
-                    </figure>
-                    <h2 class="product-title"><a href=""><%= usergiftcard.merchant.merchantname %></a></h2>
-                   
-                    <h4 style="color:black"><%= usergiftcard.cardnumber_hash[0...5] %>...</h4>
-                    <span class="primary-letter style-1 c-base">
-                            &nbsp;&nbsp;$<%= usergiftcard.balance %>
-                            </span>
-                            <br/><br/>
-
-                    <p style="text-align:center">
-                        <div style="text-align: center;">
-
-
-                           
-                        
-                            <a href="#" class="btn btn-sm btn-base btn-icon fa-refresh">
-                                <span>Refresh</span>
-                            </a>
-                        
-                        
-                            <br/><br/>
-                            <a href="#" class="btn btn-sm btn-base btn-icon fa-credit-card">
-                                <span>Donate</span>
-                            </a>
-                        </div>        
-                                
+                <div class="col-lg-6" style="text-align:center">
+                    <div class="row">
+                        <% 
+                            @usergiftcards.each do |usergiftcard|
+                        %>
+                        <div class="col-lg-6" style="text-align:center">
+                            <div class="wp-block product">
+                                <figure>
+                                    <img alt="" src="<%= CLOUDFRONT_HOST %>/<%= usergiftcard.merchant.logo.url%>" class="img-responsive img-center">
+                                </figure>
+                                <h2 class="product-title"><a href=""><%= usergiftcard.merchant.merchantname %></a></h2>
                                
-                    </p>
-                  
+                                <h4 style="color:black"><%= usergiftcard.cardnumber_hash[0...5] %>...</h4>
+                                <span class="primary-letter style-1 c-base">
+                                        &nbsp;&nbsp;$<%= usergiftcard.balance %>
+                                        </span>
+                                        <br/><br/>
+
+                                <p style="text-align:center">
+                                    <div style="text-align: center;">
+
+
+                                       
+                                    
+                                        <a href="#" class="btn btn-sm btn-base btn-icon fa-refresh">
+                                            <span>Refresh</span>
+                                        </a>
+                                    
+                                    
+                                        <br/><br/>
+                                        <a href="#" class="btn btn-sm btn-base btn-icon fa-credit-card">
+                                            <span>Donate</span>
+                                        </a>
+                                    </div>        
+                                            
+                                           
+                                </p>
+                              
+                            </div>
+
+                          </div>
+
+                      <% end %>
+                  </div>
+
+                  <div style="text-align: left;">
+                        <% if @usergiftcardscount > 2 %>
+                            <a href="#" class="btn btn-base btn-icon btn-icon-right fa-caret-square-o-right">
+                                <span>View All My Gift Cards</span>
+                            </a>
+                        <% end %>
+                        <br/><br/>
+                        <a href="/giftcard/new" class="btn btn-base btn-icon btn-icon-right fa-gift">
+                                <span>Add A New Gift Card</span>
+                        </a>
+                
+ 
+                </div>
+            </div>
+
+            <div class="col-lg-6" style="text-align:center">
+
+                <div class="row-fluid">
+                    <div class="col-md-12 wp-block no-space arrow-right base no-margin">
+                        <div class="wp-block-body">
+                            <div class="img-icon">
+                                <img src="<%= CLOUDFRONT_HOST %>/images/icons/svg/book.svg">
+                            </div>
+                            <h1>Did you know?</h1>
+                            <p class="text-center">
+                                <% @giftcardstats.each do |giftcardstat| %>
+
+                                    <%= giftcardstat.description %>
+                                    <br/><br/>
+
+                                <% end %>
+
+                            </p>
+                        </div>
+                    </div>
+                    
                 </div>
 
-              </div>
+            </div>
 
-          <% end %>
-      </div>
-
-      <div style="text-align: left;">
-            <% if session[:usergiftcardscount] > 2 %>
-                <a href="#" class="btn btn-base btn-icon btn-icon-right fa-caret-square-o-right">
-                    <span>View All My Gift Cards</span>
-                </a>
-            <% end %>
-            &nbsp;&nbsp;&nbsp;&nbsp;
-            <a href="/giftcard/new" class="btn btn-base btn-icon btn-icon-right fa-gift">
-                    <span>Add A New Gift Card</span>
-            </a>
-        <div style="text-align: center;">
-    </div>
-    
-
-
-
-</div>
-</div>
 </div>
 </section>
 
