--- a/app/views/layouts/_usergiftcards.html.erb
+++ b/app/views/layouts/_usergiftcards.html.erb
@@ -62,9 +62,9 @@ color: #fff;
                       <% end %>
                   </div>
 
-                  <div style="text-align: left;">
+                  <div style="text-align: center;">
                         <% if @usergiftcardscount > 2 %>
-                            <a href="#" class="btn btn-base btn-icon btn-icon-right fa-caret-square-o-right">
+                            <a href="/giftcard/index" class="btn btn-base btn-icon btn-icon-right fa-caret-square-o-right">
                                 <span>View All My Gift Cards</span>
                             </a>
                         <% end %>
