--- a/app/views/giftcard/index.html.erb
+++ b/app/views/giftcard/index.html.erb
@@ -1,2 +1,94 @@
-<h1>Giftcard#index</h1>
-<p>Find me in app/views/giftcard/index.html.erb</p>
+
+<div class="pg-opt">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12">
+                    <h2>My Gift Cards</h2>
+                </div>
+               
+            </div>
+        </div>
+    </div>
+
+<br/><br/>
+<section class="slice bg-white animate-hover-slide">
+        <div class="wp-section work">
+            <div class="container">
+
+<div class="row">
+
+    <div class="col-md-6">
+        <a href="/giftcard/new" class="btn btn-base btn-icon btn-icon-right fa-gift">
+            <span>Add A New Gift Card</span>
+        </a> 
+    </div>
+
+
+	<div class="col-md-6">
+		<%= will_paginate @usergiftcards , renderer: BootstrapPagination::Rails %>
+	</div>
+</div>	
+
+
+
+                <div class="row"> 
+                <div class="col-md-8">
+                     
+                    <div id="ulSorList">
+    
+                        <% @usergiftcards.each do |usergiftcard| %>
+
+                        <div class="mix category_1 col-lg-4 col-md-4 col-sm-4" data-cat="1" style="border: #cdcdcd thin solid;min-height:300px">
+                           <div class="wp-block product">
+                                    <figure>
+                                        <img alt="" src="<%= CLOUDFRONT_HOST %>/<%= usergiftcard.merchant.logo.url%>" class="img-responsive img-center">
+                                    </figure>
+                                    <h2 class="product-title"><a href=""><%= usergiftcard.merchant.merchantname %></a></h2>
+                                   
+                                    <h4 style="color:black"><%= usergiftcard.cardnumber_hash[0...5] %>...</h4>
+                                    <span class="primary-letter style-1 c-base">
+                                            &nbsp;&nbsp;$<%= usergiftcard.balance %>
+                                            </span>
+                                            <br/><br/>
+
+                                    <p style="text-align:center">
+                                        <div style="text-align: center;">
+
+                                        
+                                            <a href="#" class="btn btn-sm btn-base btn-icon fa-refresh">
+                                                <span>Refresh</span>
+                                            </a>
+                                        
+                                        
+                                            <br/><br/>
+                                            <a href="#" class="btn btn-sm btn-base btn-icon fa-credit-card">
+                                                <span>Donate</span>
+                                            </a>
+                                        </div>        
+                                                
+                                               
+                                    </p>
+                                  
+                                </div>
+                            </div>
+                        <% end %>      
+
+                        
+
+                    </div>
+                </div>
+                     <div class="col-sm-4" style="margin-top: 36px;">
+                        <!-- SIDEBAR - BLOG -->
+                        <%= render partial: "layouts/sidebar2" %>                 
+                    </div>                                 
+                </div>
+        	</div>    	
+        </div>
+    </section>
+
+
+
+<script>
+
+
+</script>
