--- a/app/views/layouts/_sidebargiftcard.html.erb
+++ b/app/views/layouts/_sidebargiftcard.html.erb
@@ -16,7 +16,7 @@
     <div class="panel panel-default panel-sidebar-1 visible-lg visible-md" id="merchantinfo">
         <div class="wp-block default">
         <div class="figure">
-        	<img alt="" id="merchantlogo" src="<%= CLOUDFRONT_HOST %>/<%=usermerchantlogo%>" class="img-responsive">     
+        	<img alt="" id="merchantlogo" src="<%= CLOUDFRONT_HOST %>/images/<%=usermerchantlogo%>" class="img-responsive">     
         </div>
         <div class="wp-block-body">
             <h2 class="title" id="merchantname"><%= usermerchantname %></h2>
