moved sidebar items to widgets

--- a/app/views/cause/new.html.erb
+++ b/app/views/cause/new.html.erb
@@ -60,7 +60,15 @@
                     </div>
                     <div class="col-md-4">
                     	<!-- SIDEBAR - BLOG -->
-                    	<%= render partial: "layouts/sidebar1" %>                 
+                        <div class="sidebar">
+    
+                            <%= render partial: "widgets/newsletter.html.erb" %>   
+
+                            <%= render partial: "widgets/testimonials.html.erb" %> 
+    
+
+                        </div> 
+                    	              
     				</div>
                 </div>
             </div>
