--- a/app/views/giftcard/index.html.erb
+++ b/app/views/giftcard/index.html.erb
@@ -78,8 +78,17 @@
                     </div>
                 </div>
                      <div class="col-sm-4" style="margin-top: 36px;">
-                        <!-- SIDEBAR - BLOG -->
-                        <%= render partial: "layouts/sidebar2" %>                 
+                       <!-- SIDEBAR - BLOG -->
+                        <div class="sidebar">
+    
+                            <%= render partial: "widgets/didyouknow.html.erb" %>   
+
+                            <%= render partial: "widgets/newsletter.html.erb" %>   
+
+                            <%= render partial: "widgets/testimonials.html.erb" %> 
+    
+
+                        </div>               
                     </div>                                 
                 </div>
         	</div>    	
