--- a/app/views/giftcard/new.html.erb
+++ b/app/views/giftcard/new.html.erb
@@ -52,7 +52,19 @@
                     </div>
                     <div class="col-md-4">
                     	<!-- SIDEBAR - BLOG -->
-                    	<%= render partial: "layouts/sidebargiftcard" %>                 
+
+                        <!-- SIDEBAR - BLOG -->
+                        <div class="sidebar">
+                
+                            <%= render partial: "widgets/merchantselectedlogo.html.erb" %> 
+
+                            <%= render partial: "widgets/newsletter.html.erb" %>   
+
+                            <%= render partial: "widgets/testimonials.html.erb" %> 
+    
+
+                        </div> 
+                    	               
     				</div>
                 </div>
             </div>
