--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -72,7 +72,10 @@ ul.ui-autocomplete {
 
 <!-- MAIN WRAPPER -->
 <div class="body-wrap">
-     <% if !flash[:notice].blank? %>
+     <% 
+     if !flash[:notice].blank? 
+        byebug
+        %>
         <div class="alert alert-info fade in" style="text-align:center">
           <%= flash[:notice] %>
         </div>
