added dialog for terms and delete for gift cards

--- a/app/views/cause/show.html.erb
+++ b/app/views/cause/show.html.erb
@@ -120,7 +120,15 @@
                         </div>
                     </div>
                     <div class="col-md-3">
-                        <%= render partial: "layouts/sidebar1" %>  
+                        <!-- SIDEBAR - BLOG -->
+                        <div class="sidebar">
+    
+                            <%= render partial: "widgets/newsletter.html.erb" %>   
+
+                            <%= render partial: "widgets/testimonials.html.erb" %> 
+    
+
+                        </div> 
                     </div>
                 </div>
             </div>
