--- a/app/views/sign_in/index.html.erb
+++ b/app/views/sign_in/index.html.erb
@@ -67,7 +67,7 @@
                                 
                             <div class="form-footer">
                                 <p>Lost your password? <a href="/sign_in/recoverpassword">Click here to recover.</a></p>
-                                <p>Don't have an account?  <a tabindex="-1" href="/sign_up">Register Here</a></p>
+                                <p>Don't have an account?  <a tabindex="-1" href="/sign_up/index">Register Here</a></p>
                             </div>
                         </div>
                     </div>
