--- a/app/views/sign_up/index.html.erb
+++ b/app/views/sign_up/index.html.erb
@@ -116,8 +116,8 @@
                                                             Please read and accept the terms and conditions.
                                                         </div>
                                                         <label>
-                                                        <input type="checkbox" id="termscheckbox" name="subscription" id="subscription">
-                                                        <i></i> I accept the <a href="#">terms and conditions</a> of this website.
+                                                        <input type="checkbox" id="termscheckbox" name="subscription" id="subscription"></input>
+                                                        <i></i> I accept the <a id="TermsLink">terms and conditions</a> of this website.
                                                     </label>
                                                 </div>
                                             
@@ -140,11 +140,11 @@
                     </div>
                 </div>
 
-
-
             </div>
         </div>
     </section>
+
+     
 
     <script>
 
@@ -291,5 +291,43 @@
             isValidPassword = true;
         });
     });
+
+ $('#TermsLink').click(function () {
+        //Load the Login action which will return 
+        // the partial view _Login
+
+        console.log('login clicked');
+
+        $dialog = $('<div></div>')
+                   .html('<iframe style="border: 1px solid;border-color: #e0eded;background:white;" src="/termsconditions/index_no_layout" width="100%" height="100%"></iframe>')
+                   .dialog({
+                       autoOpen: false,
+                       modal: true,
+                       height: $(window).height()/2,
+                       width: $(window).width()/2,
+                       title: "Changefindr - Donate Unused Gift Card Balance",
+                       position: { my: "center", at: '150', of: $(window) },
+
+
+                       buttons: {
+                           
+                           "Close": {
+                               text: 'Close',
+                               
+                               click: function () {
+
+                                   // close dialog and pop up a message to donate
+                                   $(this).dialog("destroy");
+                               }
+                           }
+
+                       }
+                   });
+
+        $dialog.dialog('open');
+        
+    });
+
+
 
     </script>
