--- a/app/views/giftcard/index.html.erb
+++ b/app/views/giftcard/index.html.erb
@@ -39,38 +39,10 @@
                         <% @usergiftcards.each do |usergiftcard| %>
 
                         <div class="mix category_1 col-lg-4 col-md-4 col-sm-4" data-cat="1" style="border: #cdcdcd thin solid;min-height:300px">
-                           <div class="wp-block product">
-                                    <figure>
-                                        <img alt="" src="<%= CLOUDFRONT_HOST %>/<%= usergiftcard.merchant.logo.url%>" class="img-responsive img-center">
-                                    </figure>
-                                    <h2 class="product-title"><a href=""><%= usergiftcard.merchant.merchantname %></a></h2>
-                                   
-                                    <h4 style="color:black"><%= usergiftcard.cardnumber_hash[0...5] %>...</h4>
-                                    <span class="primary-letter style-1 c-base">
-                                            &nbsp;&nbsp;$<%= usergiftcard.balance %>
-                                            </span>
-                                            <br/><br/>
 
-                                    <p style="text-align:center">
-                                        <div style="text-align: center;">
+                             <%= render(:partial => "giftcard_product", :locals => {:usergiftcard => usergiftcard}) %>
+                        </div>
 
-                                        
-                                            <a href="#" class="btn btn-sm btn-base btn-icon fa-refresh">
-                                                <span>Refresh</span>
-                                            </a>
-                                        
-                                        
-                                            <br/><br/>
-                                            <a href="#" class="btn btn-sm btn-base btn-icon fa-credit-card">
-                                                <span>Donate</span>
-                                            </a>
-                                        </div>        
-                                                
-                                               
-                                    </p>
-                                  
-                                </div>
-                            </div>
                         <% end %>      
 
                         
