--- a/app/views/widgets/_merchantselectedlogo.html.erb
+++ b/app/views/widgets/_merchantselectedlogo.html.erb
@@ -4,7 +4,7 @@
         usermerchantname = @giftcard.merchant.merchantname
 
     else
-        usermerchantlogo = "giftcard-3.jpg"
+        usermerchantlogo = "/images/giftcard-3.jpg"
         usermerchantname = "Gift Card"
 
     end 
@@ -13,7 +13,7 @@
     <div class="panel panel-default panel-sidebar-1 visible-lg visible-md" id="merchantinfo">
         <div class="wp-block default">
         <div class="figure">
-        	<img alt="" id="merchantlogo" src="<%= CLOUDFRONT_HOST %>/images/<%=usermerchantlogo%>" class="img-responsive">     
+        	<img alt="" id="merchantlogo" src="<%= CLOUDFRONT_HOST %><%=usermerchantlogo%>" class="img-responsive">     
         </div>
         <div class="wp-block-body">
             <h2 class="title" id="merchantname"><%= usermerchantname %></h2>
