added show and edit for giftcards

--- a/app/views/giftcard/_giftcard_form.html.erb
+++ b/app/views/giftcard/_giftcard_form.html.erb
@@ -49,7 +49,7 @@
                 <label class="input">
 
                     <i class="icon-append fa fa-barcode"></i>
-                    <input type="text" name="cardnumber" id="cardnumber" placeholder="Please enter gift card number">
+                    <input type="text" name="cardnumber" id="cardnumber" value="<%= @giftcard.cardnumber_hash %>" placeholder="Please enter gift card number">
                                                                            
                 </label>
 
