--- a/app/views/cause/edit.html.erb
+++ b/app/views/cause/edit.html.erb
@@ -70,8 +70,15 @@
 			    </div>
                     </div>
                     <div class="col-md-4">
-                    	<!-- SIDEBAR - BLOG -->
-                    	<%= render partial: "layouts/sidebar1" %>                   
+                    	<!-- SIDEBAR -->
+                        <div class="sidebar">
+    
+                            <%= render partial: "widgets/newsletter.html.erb" %>   
+
+                            <%= render partial: "widgets/testimonials.html.erb" %> 
+    
+
+                        </div>                  
     				</div>
                 </div>
             </div>
