--- a/app/views/giftcard/_giftcard_product.html.erb
+++ b/app/views/giftcard/_giftcard_product.html.erb
@@ -3,10 +3,10 @@
             <figure>
                 <img alt="" src="<%= CLOUDFRONT_HOST %>/<%= usergiftcard.merchant.logo.url%>" class="img-responsive img-center">
             </figure>
-            <h2 class="product-title"><a href=""><%= usergiftcard.merchant.merchantname %></a></h2>
+            <h2 class="product-title"><a href="/giftcard/show/<%= usergiftcard.giftcardid %>"><%= usergiftcard.merchant.merchantname %></a></h2>
            
             <h4 style="color:black"><%= usergiftcard.cardnumber_hash[0...5] %>...</h4>
-            <span class="primary-letter style-1 c-base">
+            <span class="primary-letter style-1 c-base" style="float:center">
                     &nbsp;&nbsp;$<%= usergiftcard.balance %>
                     </span>
                     <br/><br/>
@@ -30,6 +30,11 @@
             
             <a href="/giftcard/delete/<%= usergiftcard.giftcardid %>" class="cart-remove" title="Remove item" style="color:#e80e1d" data-confirm="Are you sure you want to delete this?"><i class="fa fa-times-circle"></i>Delete</a>
 
+            <% if session[:roleid] == 1 %>
+                <br/>
+                <a href="/giftcard/edit/<%= usergiftcard.giftcardid %>">Edit</a>
+
+            <% end %>
             
     </div>
 
