--- a/app/views/giftcard/edit.html.erb
+++ b/app/views/giftcard/edit.html.erb
@@ -1,2 +1,72 @@
-<h1>Giftcard#edit</h1>
-<p>Find me in app/views/giftcard/edit.html.erb</p>
+
+       
+    <!-- MAIN CONTENT -->
+    <section class="slice slice-lg bg-image" style="background-image:url(/images/backgrounds/full-bg-2.jpg)">
+        <div class="wp-section">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-7 col-md-offset-1 col-sm-5 col-sm-offset-1">
+                    	<div class="row">
+                    		
+						 
+                    		<div class="col-md-12">
+
+							<div class="wp-block default user-form no-margin">
+	                            <div class="form-header">
+	                                <h2>Tell us about your cause</h2>
+	                            </div>
+
+						      <div class="form-body">
+                                <%= form_for(@giftcard, :url => {:action => 'update', :id => @giftcard.giftcardid}, :method => :POST, :html => {:class => 'sky-form', :id => "myform"}) do |f| %>
+
+                                    <%= render(:partial => "giftcard_form", :locals => {:f => f}) %>
+
+                                   
+                                    <fieldset>          
+                                      
+                                        <section>
+                                            <div class="row">
+                                                <div class="col-md-12">
+                                                    
+                                                    <br>
+                                                    <button id="register_button" class="btn btn-base btn-icon btn-icon-right btn-sign-in" type="button"
+                                                    onClick="this.form.submit(); this.disabled=true;"
+                                                    >
+                                                        <span>Update Gift Card</span>
+                                                    </button>
+                                                </div>
+                                                
+                                        </section>
+                                    </fieldset>
+
+                                <!--/form-->
+                                <% end %>  
+                            	</div>
+
+                            
+			            </div>
+			       		 </div>
+
+			       		
+			    </div>
+                    </div>
+                    <div class="col-md-4">
+                    	<!-- SIDEBAR -->
+                        <div class="sidebar">
+                
+                            <%= render partial: "widgets/merchantselectedlogo.html.erb" %> 
+
+                            <%= render partial: "widgets/newsletter.html.erb" %>   
+
+                            <%= render partial: "widgets/testimonials.html.erb" %> 
+    
+
+                        </div> 
+                    	                               
+    				</div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+   
