--- a/app/views/giftcard/new.html.erb
+++ b/app/views/giftcard/new.html.erb
@@ -1,8 +1,4 @@
-
-       
-    <!-- MAIN CONTENT -->
-    	
-
+<!-- MAIN CONTENT -->
     <section class="slice slice-lg bg-image" style="background-image:url(/images/backgrounds/full-bg-2.jpg)">
         <div class="wp-section">
             <div class="container">
@@ -51,9 +47,9 @@
 			    </div>
                     </div>
                     <div class="col-md-4">
-                    	<!-- SIDEBAR - BLOG -->
+                    	
 
-                        <!-- SIDEBAR - BLOG -->
+                        <!-- SIDEBAR -->
                         <div class="sidebar">
                 
                             <%= render partial: "widgets/merchantselectedlogo.html.erb" %> 
