--- a/app/views/giftcard/_giftcard_product.html.erb
+++ b/app/views/giftcard/_giftcard_product.html.erb
@@ -21,7 +21,7 @@
                 
                 
                     <br/><br/>
-                    <a href="#" class="btn btn-sm btn-base btn-icon fa-credit-card">
+                    <a href="/donate/new?giftcardid=<%= usergiftcard.giftcardid %>" class="btn btn-sm btn-base btn-icon fa-credit-card">
                         <span>Donate</span>
                     </a>
                 </div>
