--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -158,13 +158,13 @@
                                                         <div class="figcaption bg-base"></div>
                                                         <div class="figcaption-btn">
                                                             
-                                                            <a href="#" class="btn btn-xs btn-b-white"><i class="fa fa-credit-card"></i> Donate</a>
+                                                            <a href="/cause/donatesomething" class="btn btn-xs btn-b-white"><i class="fa fa-credit-card"></i> Donate</a>
                                                             <a href="<%= "http://" +  @userhost + "/cause/show/" +  @causes[i+k].charityid.to_s %>" class="btn btn-xs btn-b-white"><i class="fa fa-plus-circle"></i> View Details</a>
                                                         </div>
                                                     </div>
                                                     <div class="row">
                                                         <div class="col-xs-9">
-                                                            <a href="#" class="btn btn-md"><i class="fa fa-credit-card"></i> Donate</a>
+                                                            <a href="/cause/donatesomething" class="btn btn-md"><i class="fa fa-credit-card"></i> Donate</a>
                                                             <br/>
                                                             <a href="<%= "http://" +  @userhost + "/cause/show/" +  @causes[i+k].charityid.to_s %>">
                                                             <h2 class="text-left"><%= @causes[i+k].charityname %></h2>
