--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -158,7 +158,7 @@
                                                         <div class="figcaption bg-base"></div>
                                                         <div class="figcaption-btn">
                                                             
-                                                            <a href="/donate/new/?charityid=<%= @causes[i+k].charityid %>" class="btn btn-xs btn-b-white"><i class="fa fa-credit-card"></i> Donate</a>
+                                                            <a href="/donate/new/?charityid=<%= @cause[i+k].charityid %>" class="btn btn-xs btn-b-white"><i class="fa fa-credit-card"></i> Donate</a>
                                                             <a href="<%= "http://" +  @userhost + "/cause/show/" +  @causes[i+k].charityid.to_s %>" class="btn btn-xs btn-b-white"><i class="fa fa-plus-circle"></i> View Details</a>
                                                         </div>
                                                     </div>
