--- a/app/views/cause/show.html.erb
+++ b/app/views/cause/show.html.erb
@@ -73,7 +73,7 @@
 
 
                                     <br/>
-                                    <button id="register_button" class="btn btn-base btn-icon btn-icon-right btn-sign-in" type="button" onClick="#">
+                                    <button id="register_button" class="btn btn-base btn-icon btn-icon-right btn-sign-in" type="button" onClick="location.href='/donate/new/?charityid=<%= @cause.charityid %>'">
                                                         <span>Donate Unused Gift Card</span>
                                     </button>
                                     <br/>
