--- a/app/views/sign_up/index.html.erb
+++ b/app/views/sign_up/index.html.erb
@@ -1,4 +1,4 @@
- <section class="slice slice-lg bg-image" style="background-image:url(/images/backgrounds/full-bg-1.jpg)">
+ <section class="slice slice-lg bg-image" style="background: url(/images/patterns/squairy-light.png) repeat fixed !important;">
         <div class="wp-section">
             <div class="container">
                 <div class="row">
@@ -100,6 +100,8 @@
                                                     <button id="register_button" class="btn btn-base btn-icon btn-icon-right btn-sign-in" type="button">
                                                         <span>Register now</span>
                                                     </button>
+                                                    <br>
+                                                    <p>Please accept the terms and conditions in order to complete registration</p>
 
                                                 </section>
 
