--- a/app/views/cause/edit.html.erb
+++ b/app/views/cause/edit.html.erb
@@ -1,7 +1,7 @@
 
        
     <!-- MAIN CONTENT -->
-    <section class="slice slice-lg bg-image" style="background-image:url(/images/backgrounds/full-bg-2.jpg)">
+    <section class="slice slice-lg bg-image" style="background: url(/images/patterns/squairy-light.png) repeat fixed !important;">
         <div class="wp-section">
             <div class="container">
                 <div class="row">
