--- a/app/views/sign_in/resetpassword.html.erb
+++ b/app/views/sign_in/resetpassword.html.erb
@@ -1,5 +1,5 @@
-  <section class="slice slice-lg bg-image" style="background-image:url(/images/backgrounds/full-bg-1.jpg);">
-  <section class="slice slice-lg bg-image" style="background-image:url(/images/backgrounds/full-bg-1.jpg);">
+  
+  <section class="slice slice-lg bg-image" style="background: url(/images/patterns/squairy-light.png) repeat fixed !important;">
         <div class="wp-section">
             <div class="container">
                 <div class="row">
